added reactor for flux